# drishti

./: README.md  main.py  pyproject.toml
backend/: __init__.py  config.py  database.py  main.py  models.py
backend/data/: drishti.db
backend/data/tiles/: 07dd9dc75e3e.npy  07dd9dc75e3e_meta.npy  108e23105e07.npy  108e23105e07_meta.npy  17298e9016db.npy  17298e9016db_meta.npy  37b119120b24.npy  37b119120b24_meta.npy  3b35a31764ee.npy  3b35a31764ee_meta.npy  478d81cdcc46.npy  478d81cdcc46_meta.npy  578dc5a5131a.npy  578dc5a5131a_meta.npy  5d85f196af0f.npy  5d85f196af0f_meta.npy  6308a54cd610.npy  6308a54cd610_meta.npy  69500aacbe3f.npy  69500aacbe3f_meta.npy  770606b59082_meta.npy  7876c7081a80_meta.npy  913b225f8dd6.npy  913b225f8dd6_meta.npy  ac8c6e9fd187.npy  ac8c6e9fd187_meta.npy  c32fea14daa5.npy  c32fea14daa5_meta.npy  d2b6ee0dd2c5_meta.npy  d6aaa5d3c433.npy  d6aaa5d3c433_meta.npy  f20ccd17eba1.npy  f20ccd17eba1_meta.npy
backend/routers/: areas.py  auth.py  comparison.py  compliance.py  detection.py  export.py  projects.py
backend/services/: allotment_service.py  comparator.py  compliance.py  csidc_client.py  green_cover.py  pdf_generator.py  sam_detector.py  tile_fetcher.py  vectorizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AreaDashboard.tsx  Dashboard.tsx  Header.tsx  LoginPage.tsx  MapView.tsx  Sidebar.tsx  Toast.tsx
frontend/src/data/: mockData.ts
frontend/src/stores/: useStore.ts
frontend/src/types/: index.ts
